@@ -853,8 +853,8 @@ MANACOMPOUND=
 # You may also include a comma delimited list of spell/skill IDs
 # followed by their specific minimum values for exceptions.
 # Example: MANAMINCOST=Spell_Shield 10, Skill_Recall 5, -1
-# The default is -1.
-MANAMINCOST=-1
+# The default is -1, 10.
+MANAMINCOST=-1, 10
 
 # ABILITY COSTS are three fields which define the number of 
 # trains, xp, money, and/or practices required to gain an ability by 
