@@ -1,9 +1,11 @@
 # Build 5.9.12 Release ?/?/2021
   1. Prop_Have/WearAdjuster supports item sets now
-  2. MANACOST entry in coffeemud.ini allows more flexible skill costs
+  2. MANACOST and MANAMINCOST entries in coffeemud.ini allows more flexible skill costs
   3. Skill use will now attempt to check range before consuming mana/resources
   4. New locale types: undergroundcitystreet and underwatercitystreet
   5. New command: abilities
+  6. Default MINMANACOST is now skill level or 10, whichever is greater.
+  
 # Build 5.9.11 Release 02/20/2021
   1. a(n) is now official filter syntax for a/an
   2. Shutdown command now supports AT syntax to set a RL time certain.
